--- a/admin/products.html
+++ b/admin/products.html
@@ -24,7 +24,7 @@
             <h4>Lorem ipsum, dolor sitr adipisicing.</h4>
             <p>Lorem ipsum dolor sit.</p>
 
-            <div class="add">App Product</div>
+            <div class="add">Add Product</div>
  
 
             <div class="products orders">
@@ -35,6 +35,7 @@
                         <span>Product Name</span>
                         <span>Description</span>
                         <span>Price</span>
+                        <span>Category</span>
                         <span>Actions</span>
                     </div>
                     <div class="line">
@@ -42,6 +43,7 @@
                         <span>Apple MacBook Pro 2022</span>
                         <span>Laptop with advanced features</span>
                         <span>$2000.00</span>
+                        <span>Laptops</span>
                         <span><a href="#">View Details</a></span>
                     </div>
                     <div class="line">
@@ -49,11 +51,13 @@
                         <span>Apple iPhone 13</span>
                         <span>Latest smartphone from Apple</span>
                         <span>$999.00</span>
+                        <span>Smartphones</span>
                         <span><a href="#">View Details</a></span>
                     </div>
                     <!-- Add more product lines as needed -->
                 </div>
             </div>
+            
             
 
          </div>
